--- a/index.html
+++ b/index.html
@@ -247,6 +247,6 @@
     </script>
 
     <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-    <script>commentBox('my-project-id')</script>
+    <script>commentBox('5680160040812544-proj')</script>
   </body>
 </html>
