--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>خَمْسٌ مِنْ الْفِطْرَةِ : الاِسْتِحْدَادُ وَالْخِتَانُ وَقَصُّ الشَّارِبِ وَنَتْفُ الإِبْطِ وَتَقْلِيمُ الأَظْفَارِ<br/>Dari Abu Hurairah r.a., ia berkata bahwa Rasulullah SAW bersabda, "Lima dari fitrah: memotong bulu kemaluan, khitan, memotong kumis, mencabut bulu ketiak, dan memotong kuku." (HR Jama'ah).<br/><br/>Dengan rasa syukur, kami mengundang Bapak/Ibu/Saudara/i dalam acara khitanan putra pertama kami<p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" onclick="playAudio()">Buka Undangan</button>
+        <button type="button" class="btn btn-primary"  data-dismiss="modal" onclick="playAudio()">Buka Undangan</button>
       </div>
     </div>
   </div>
